<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">TicktApp</string>
    <string name="google_key">AIzaSyChSSKKraOW4UpWtLVxE0mR0Yd2KQDbrwk</string>
    <string name="select_how_to_choose_image">Select how to choose image/Video</string>
    <string name="register">Register</string>
    <string name="continue_">Continue</string>
    <string name="take_photo">Take photo</string>
    <string name="upload">Upload</string>
    <string name="a_tablet_is_on_its_way_to_sam_barton_don_t_worry_we_will_let_you_know_when_it_arrives">A tablet is on its way to Sam Barton, don\'t worry we will let you know when it arrives.</string>
    <string name="registration_complete">Registration Complete!</string>
    <string name="thanks_for_completing_the_registration_process_n_ndo_you_know_anyone_who_would_like_to_be_in_touch_with_your_persion_in_care_let_s_share_the_app_with_them">Thanks for completing the registration process.\n\nDo you know anyone who would like to be in touch with your Person in Care? Let’s share the app with them!</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="there_is_something_wrong_with_your_internet_connection_please_click_on_the_refresh_button_below_to_restart_the_application">There is something wrong with your internet connection. Please click on the refresh button below to restart the application.</string>
    <string name="menu_remove_photo">Remove Photo</string>
    <string name="cancel">Cancel</string>
    <string name="permission_from_device">Please provide the permission to use this feature.</string>
    <string name="ok">OK</string>
    <string name="email_is_not_valid">Please enter the valid email address</string>
    <string name="password_must_be_of_atleast_8_digit">Password must contain at least 8 characters.</string>
    <string name="please_enter_email_address">Please enter your email address.</string>
    <string name="please_enter_email_address_">Please enter email address.</string>
    <string name="password_error">Please enter an alpha-numeric password with atleast 8 characters and one uppercase, one lowercase letter, and one special character</string>
    <string name="passwords_not_matching">Passwords are not matching</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="please_enter_full_name">Please enter full name </string>
    <string name="please_enter_phone_num">Please enter phone number </string>
    <string name="message_phone_number_should_have_min_six_digits">Invalid phone number</string>
    <string name="please_enter_valid_phone_number">Please enter valid phone number </string>
    <string name="please_enter_confirm_password">Please enter confirm password</string>
    <string name="password_mismatch">Password does not match</string>
    <string name="something_went_wrong" tools:ignore="TypographyEllipsis">Something went wrong! Please try again...</string>
    <string name="email">Email</string>
    <string name="new_email">New email</string>
    <string name="new_email_">New Email</string>
    <string name="action_resend_code">Re-send code</string>
    <string name="password">Password</string>
    <string name="one_time_password">One time password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_must_have_8_characters">Password must has at least 8 characters that include:</string>
    <string name="at_least_one_lowercase">At least 1 lowercase character</string>
    <string name="atlest_one_upper_case">At least 1 uppercase character</string>
    <string name="at_least_1_number">At least 1 number</string>
    <string name="at_least_1_special_character_in"><![CDATA[At least 1 special character in (!@#$%^&*)]]></string>
    <string name="under_developement">Under Development</string>
    <string name="logout">Log out</string>
    <string name="please_enter_otp">Please enter OTP</string>
    <string name="please_enter_complete_OTP">Please enter complete OTP</string>
    <string name="otp_should_be_of_eight_characters">OTP should be of 5 characters</string>
    <string name="log_in">Log in</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_password_question_mark">Forgot Password ?</string>
    <string name="reset_password">Reset password</string>
    <string name="new_password">New password</string>
    <string name="new_password_">New Password</string>
    <string name="skip_for_now">Skip For Now</string>
    <string name="change_photo">Change photo</string>
    <string name="next">Next</string>
    <string name="add_your_photo">Add your photo</string>
    <string name="change_password">Change password</string>
    <string name="change_email">Change email</string>
    <string name="create_new_password">Create new password</string>
    <string name="in_the_meantime_help_us_fill_out_some_information">In the meantime help us fill out some information</string>
    <string name="account_unblock">Account Unblock</string>
    <string name="please_enter_your_email_and_password_to_log_in">Please enter your email and password to log in</string>
    <string name="dont_have_account_register_now">Don’t have an account? Register Now</string>
    <string name="allow">Allow</string>
    <string name="deny">Deny</string>
    <string name="share_contact_list">Share Contact List?</string>
    <string name="invite_contact">Invite Contact</string>
    <string name="invite_by_email">Invite by email</string>
    <string name="invite_by_sms">Invite by SMS</string>
    <string name="contact_number">Contact Number</string>
    <string name="send_invite">Send Invite</string>
    <string name="search_contact">Search Contact</string>
    <string name="name">Name</string>
    <string name="permission_required_to_fetch_contacts">Permission required to invite contacts</string>
    <string name="send_invitation">Send Invitation</string>
    <string name="back_to_home">Back to home</string>
    <string name="select_atleast_one_contact">Select atleast one contact</string>
    <string name="enter_contact_number">Please enter contact number</string>
    <string name="enter_complete_contact_number">Please enter complete contact number</string>
    <string name="share_app">Share App</string>
    <string name="invite_contacts_to_connect_with">Invite contacts to connect with</string>
    <string name="please_enter_the_email_address_you_d_like_your_password_reset_information_sent_to">Please enter the email address you\'d like your password reset information sent to</string>
    <string name="your_new_password_must_be_different_from_previous_used_passwords">Your new password must be different from previous used passwords</string>
    <string name="please_enter_the_otp_sent_to_your_registered_email_id">Please Enter the OTP sent to your registered Email ID</string>
    <string name="eg_18928718829">Eg. +18928718829</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="relationship">Relationship</string>
    <string name="confirm_change">Confirm Change</string>
    <string name="edit_my_profile">Edit my profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="please_enter_first_name">Please enter first name</string>
    <string name="please_enter_last_name">Please enter last name</string>
    <string name="add_relation_with">Add Relation with</string>
    <string name="no_data_found">No records found</string>
    <string name="no_jobs_found">No jobs found</string>
    <string name="not_applied_any_job">You have not applied for any job!</string>
    <string name="completed_job_not_found">You have not completed any job!</string>
    <string name="no_jobs_found_">No new jobs has been found!</string>
    <string name="no_approved_milestone_found">No approved milestone found</string>
    <string name="resend">Resend</string>
    <string name="please_enter_relation">Please enter relation</string>
    <string name="configuration">Configuration</string>
    <string name="add_contacts">Add Contacts</string>
    <string name="invite">Invite</string>
    <string name="please_enter_email_address_of_recipient">Please enter email address of recipient</string>
    <string name="delete">Delete</string>
    <string name="delete_question_mark">Delete?</string>
    <string name="are_you_sure_want_to_delete_this_user">Are you sure you want to delete this user?</string>
    <string name="done">Done</string>
    <string name="done_">Done!</string>
    <string name="contact">Contact</string>
    <string name="contacts">Contacts</string>
    <string name="invite_manually">Invite manually</string>
    <string name="are_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logout_question_mark">Logout?</string>
    <string name="more_contacts">More Contacts</string>
    <string name="start_call">Start Call</string>
    <string name="manual_invite">Manual Invite</string>
    <string name="hello">Hello,</string>
    <string name="welcome_to_tickt_app">Welcome to TicktApp!</string>
    <string name="start_using_tickt_app">Start Using TicktApp</string>
    <string name="forgotten_your_password">Forgotten your password ?</string>
    <string name="or_continue_with">or continue with</string>
    <string name="welcome_to_tickt">Welcome to Tickt</string>
    <string name="australia_s_fastest_growing_network_for_builders_and_tradespeople">Australia\'s fastest growing network for builders and tradespeople.</string>
    <string name="Im_tradie">I’m a tradesperson</string>
    <string name="im_builder">I’m a builder</string>
    <string name="Find_quality_work_that_grows_your_business">Find quality work \n that grows your \n business.</string>
    <string name="Choose_work_that_suits_your_location_price_and_schedule">Choose work that \n suits your location, \n price and schedule.</string>
    <string name="Job_milestones_and_scheduling_ensures_you_are_paid_on_time">Job milestones and \n scheduling ensures \n you are paid on \n time.</string>
    <string name="txt_i_agree_to_the_terms_and_condition_and_privacy_policy">I agree to Privacy Policy and Terms &amp; Conditions</string>
    <string name="get_started">Get started</string>
    <string name="sign_up">Sign up</string>
    <string name="full_name">Full Name</string>
    <string name="full_name_">Full name</string>
    <string name="action_terms_and_condition">Terms &amp; Conditions</string>
    <string name="action_privacy_policy">Privacy Policy</string>
    <string name="add_mile">+ Add Milestone</string>
    <string name="milestone">Milestone</string>
    <string name="milestone_name">Milestone Name</string>
    <string name="recommended_hours_">Estimated Hours</string>
    <string name="recommended_hours">Estimated Hours</string>
    <string name="choose">Choose</string>
    <string name="duration_of_milestone">Duration\nof Milestone</string>
    <string name="photo_evidence_required">Photo evidence required</string>
    <string name="payment_details">Payment details</string>
    <string name="enter_your_bank_account_details">Enter your Bank account details</string>
    <string name="account_name">Account name</string>
    <string name="account_name_">Account Name</string>
    <string name="account_number">Account number</string>
    <string name="account_number_">Account Number</string>
    <string name="bsb_number">BSB number</string>
    <string name="bsb_number_">BSB Number</string>
    <string name="save_changes">Save changes</string>
    <string name="milestone_name_">Milestone Name</string>
    <string name="add_id_verification">Add Id Verification</string>
    <string name="id_verification_is_required">ID Verification is required as part of Stripe ID Verification process</string>
</resources>