<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".mvvm.view.builder.postjob.TemplateMilestoneActivity">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/temp_mile_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:padding="@dimen/_6sdp"
            android:src="@drawable/ic_left" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_milestone_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_18sdp"
            android:layout_marginTop="@dimen/_8sdp"
            app:fontFamily="@font/neue_haas_display_medium"
            android:text="@string/milestone"
            android:textColor="@color/color_161d4a"
            android:textSize="@dimen/_34ssp">

        </androidx.appcompat.widget.AppCompatTextView>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_18sdp"
            android:layout_marginTop="@dimen/_30sdp"
            app:fontFamily="@font/inter_regular"
            android:text="@string/milestone_name_"
            android:textColor="@color/color_313d48"
            android:textSize="@dimen/_14ssp" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/ed_milestone_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_18sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:layout_marginEnd="@dimen/_24sdp"
            android:background="@drawable/bg_edittext"
            app:fontFamily="@font/neue_haas_display_medium"
            android:hint="@string/milestone_name"
            android:imeOptions="actionDone"
            android:inputType="textCapSentences"
            android:paddingStart="@dimen/_15sdp"
            android:paddingTop="@dimen/_18sdp"
            android:paddingEnd="@dimen/_15sdp"
            android:paddingBottom="@dimen/_18sdp"
            android:singleLine="true"
            android:textColor="@color/color_161d4a"
            android:textColorHint="@color/color_99A4B6"
            android:textSize="@dimen/_16ssp" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cb_photo_required"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_18sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@android:color/transparent"
            android:button="@drawable/selector_check_box"
            app:fontFamily="@font/neue_haas_display_medium"
            android:paddingStart="@dimen/_10ssp"
            android:paddingEnd="@dimen/_10sdp"
            android:text="@string/photo_evidence_required"
            android:textColor="@color/color_161d4a"
            android:textSize="@dimen/_18ssp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30ssp"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_18sdp"
                android:layout_weight="1"
                android:id="@+id/tvDurationOfMilestone"
                app:fontFamily="@font/inter_regular"
                android:lineSpacingExtra="@dimen/_2sdp"
                android:text="@string/duration_of_milestone"
                android:textColor="@color/color_313d48"
                android:textSize="@dimen/_14ssp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_add_date"
                android:layout_width="@dimen/_185sdp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_18sdp"
                android:layout_marginEnd="@dimen/_24sdp"
                android:background="@drawable/bg_round_corner_dfe5ef"
                app:fontFamily="@font/neue_haas_display_medium"
                android:hint="@string/choose"
                android:paddingStart="@dimen/_32sdp"
                android:paddingTop="@dimen/_16sdp"
                android:paddingEnd="@dimen/_32sdp"
                android:paddingBottom="@dimen/_16sdp"
                android:textAllCaps="false"
                android:textColor="@color/color_161d4a"
                android:textColorHint="@color/color_161d4a"
                android:textSize="@dimen/_14ssp">

            </androidx.appcompat.widget.AppCompatButton>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:id="@+id/tvRecommendedHours"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_18sdp"
            android:layout_marginTop="@dimen/_32ssp"
            app:fontFamily="@font/inter_regular"
            android:text="@string/recommended_hours_"
            android:textColor="@color/color_313d48"
            android:textSize="@dimen/_14ssp" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_add_milestone_tv_hours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_18sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:layout_marginEnd="@dimen/_24sdp"
            android:background="@drawable/bg_edittext"
            app:fontFamily="@font/neue_haas_display_medium"
            android:hint="@string/recommended_hours"
            android:paddingStart="@dimen/_15sdp"
            android:paddingTop="@dimen/_18sdp"
            android:paddingEnd="@dimen/_15sdp"
            android:paddingBottom="@dimen/_18sdp"
            android:singleLine="true"
            android:textColor="@color/color_161d4a"
            android:textColorHint="@color/color_99A4B6"
            android:textSize="@dimen/_16ssp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/job_mile_add_more"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_18sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_18sdp"
            android:background="@drawable/bg_round_corner_dfe5ef"
            app:fontFamily="@font/neue_haas_display_medium"
            android:paddingStart="@dimen/_22sdp"
            android:paddingTop="@dimen/_16sdp"
            android:paddingEnd="@dimen/_22sdp"
            android:paddingBottom="@dimen/_16sdp"
            android:text="@string/add_mile"
            android:textAllCaps="false"
            android:textColor="@color/color_161d4a"
            android:textSize="@dimen/_14ssp">

        </androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/tv_add_milestone_done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_18sdp"
            android:background="@drawable/bg_round_corner_dfe5ef"
            android:backgroundTint="@color/color_fee600"
            app:fontFamily="@font/neue_haas_display_medium"
            android:paddingStart="@dimen/_22sdp"
            android:paddingTop="@dimen/_16sdp"
            android:paddingEnd="@dimen/_22sdp"
            android:paddingBottom="@dimen/_16sdp"
            android:text="@string/continue_"
            android:textAllCaps="false"
            android:textColor="@color/color_161d4a"
            android:textSize="@dimen/_14ssp">

        </androidx.appcompat.widget.AppCompatButton>

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>
